# tooling-demo

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  mise.toml  pyproject.toml
articles/: 01-a-better-first-day-with-mise-en-place.md  01-a-better-first-day-with-mise.md  02-consistent-python-contributions-with-prek.md
src/tooling_demo/: __init__.py  api.py  cli.py  service.py
tests/: test_api.py  test_cli.py  test_service.py
