[project]
name = "tooling-demo"
version = "0.1.0"
description = "A small FastAPI service for exploring modern Python tooling."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click==8.4.1",
    "fastapi==0.137.1",
    "uvicorn==0.49.0",
]

[project.scripts]
tooling-demo = "tooling_demo.cli:cli"

[dependency-groups]
dev = [
    # FastAPI's TestClient uses httpx2 to exercise the ASGI app in tests.
    "httpx2==2.4.0",
    "pytest==9.1.0",
    "ruff==0.15.17",
]

[build-system]
requires = ["uv_build==0.11.21"]
build-backend = "uv_build"

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
